// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled-components sawmill should generate dark theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "contrast": {
      "danger": "rgb(255,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(251,251,251)",
      "info": "rgb(235,235,255)",
      "primary": "rgb(230,221,230)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(81,81,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ff6969",
        "color": "rgb(255,250,250)",
      },
      "default": {
        "background": "#a29b9b",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#afaaaa",
        "color": "rgb(252,251,251)",
      },
      "info": {
        "background": "#7269fb",
        "color": "rgb(250,250,255)",
      },
      "primary": {
        "background": "#a2699b",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729b69",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#e8e832",
        "color": "rgb(90,90,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#bfe7ff",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(20,20,20,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "input": {
      "background": "#0b42ff",
      "backgroundDisabled": "#0a39dd",
      "border": "#767676",
      "borderFocus": "#0000eb",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0,0,235,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "table": {
      "background": "#1d1d1d",
      "backgroundAlt": "#323232",
      "backgroundHover": "#282828",
      "variant": {
        "active": "#404040",
        "danger": "#800000",
        "info": "#000080",
        "primary": "#400040",
        "success": "#004000",
        "warning": "#808000",
      },
      "variantHover": {
        "active": "#676767",
        "danger": "#ce0000",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
    },
    "variant": {
      "danger": "#FF0000",
      "dark": {
        "danger": "#ff6363",
        "default": "#9a9a9a",
        "gray": "#a9a9a9",
        "info": "#6363ff",
        "primary": "#9a639a",
        "success": "#639a63",
        "warning": "#ffff63",
      },
      "darker": {
        "danger": "#ff9797",
        "default": "#b7b7b7",
        "gray": "#c1c1c1",
        "info": "#9797ff",
        "primary": "#b797b7",
        "success": "#97b797",
        "warning": "#ffff97",
      },
      "darkest": {
        "danger": "#ffbdbd",
        "default": "#d0d0d0",
        "gray": "#d6d6d6",
        "info": "#bdbdff",
        "primary": "#d0bdd0",
        "success": "#bdd0bd",
        "warning": "#ffffbd",
      },
      "default": "#808080",
      "gray": "#959595",
      "info": "#0000FF",
      "light": {
        "danger": "#eb0000",
        "default": "#767676",
        "gray": "#898989",
        "info": "#0000eb",
        "primary": "#760076",
        "success": "#007600",
        "warning": "#ebeb00",
      },
      "lighter": {
        "danger": "#ce0000",
        "default": "#676767",
        "gray": "#787878",
        "info": "#0000ce",
        "primary": "#670067",
        "success": "#006700",
        "warning": "#cece00",
      },
      "lightest": {
        "danger": "#ab0000",
        "default": "#565656",
        "gray": "#646464",
        "info": "#0000ab",
        "primary": "#560056",
        "success": "#005600",
        "warning": "#abab00",
      },
      "primary": "#800080",
      "success": "#008000",
      "warning": "#FFFF00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #d0d0d0;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #565656;
      color: #d0d0d0;
    }

    .ace_print-margin {
      width: 1px;
      background: #565656;
    }

    .ace_cursor {
      color: #767676;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #676767;
      }
    }

    .ace_gutter-active-line {
      background-color: #676767;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #9797ff;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #b797b7;
    }

    .ace_constant.ace_other {
      color: #b7b7b7;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #eb0000;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #800080;
    }

    .ace_fold {
      background-color: #0000FF;
      border-color: #d0d0d0;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000FF;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #ffff97;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #97b797;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #eb0000;
    }

    .ace_comment {
      color: #9a9a9a;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #FF0000;
        border-color: #ff3535;
        color: rgb(255,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ee262b;
          border-color: #ee3e41;
          color: #eee9ea;
        }

        &.active {
          background-color: #ff4a4a;
          border-color: #ff5b5b;
          color: rgb(255,249,249);

          &:hover {
            background-color: #ee4e51;
            border-color: #ee5c5e;
            color: #eee9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #ff6969;
          border-color: #ff5b5b;
          color: rgb(255,250,250);

          &:hover {
            background-color: #ff6969;
            border-color: #ff5b5b;
            color: rgb(255,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000FF;
        border-color: #3935fe;
        color: rgb(235,235,255);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426ef;
          border-color: #3f3eee;
          color: #dcdcef;
        }

        &.active {
          background-color: #514afd;
          border-color: #635bfc;
          color: rgb(249,249,255);

          &:hover {
            background-color: #534eed;
            border-color: #625cec;
            color: #e8e9ef;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269fb;
          border-color: #635bfc;
          color: rgb(250,250,255);

          &:hover {
            background-color: #7269fb;
            border-color: #635bfc;
            color: rgb(250,250,255);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #bfe7ff;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #bfe7ff;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #bfe7ff;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #800080;
        border-color: #893587;
        color: rgb(230,221,230);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #7b267e;
          border-color: #833e84;
          color: #d7cfd8;
        }

        &.active {
          background-color: #924a8e;
          border-color: #9a5b95;
          color: rgb(251,249,251);

          &:hover {
            background-color: #8b4e8a;
            border-color: #925c90;
            color: #eae9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #a2699b;
          border-color: #9a5b95;
          color: rgb(251,250,251);

          &:hover {
            background-color: #a2699b;
            border-color: #9a5b95;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #008000;
        border-color: #398735;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #247c2b;
          border-color: #3f8241;
          color: #e8eaea;
        }

        &.active {
          background-color: #518e4a;
          border-color: #63955b;
          color: rgb(249,251,249);

          &:hover {
            background-color: #538851;
            border-color: #628f5e;
            color: #e8ebea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729b69;
          border-color: #63955b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729b69;
            border-color: #63955b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #FFFF00;
        border-color: #f9fa19;
        color: rgb(81,81,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #eeee2b;
          border-color: #e8ea31;
          color: #53542b;
        }

        &.active {
          background-color: #f4f423;
          border-color: #eeee2b;
          color: rgb(77,77,11);

          &:hover {
            background-color: #e4e436;
            border-color: #dedf3b;
            color: #4f512d;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #e8e832;
          border-color: #eeee2b;
          color: rgb(90,90,19);

          &:hover {
            background-color: #e8e832;
            border-color: #eeee2b;
            color: rgb(90,90,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #959595;
        border-color: #9c9a9a;
        color: rgb(251,251,251);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #8e8f90;
          border-color: #949394;
          color: #eaebeb;
        }

        &.active {
          background-color: #a3a0a0;
          border-color: #a9a5a5;
          color: rgb(251,251,251);

          &:hover {
            background-color: #9a989a;
            border-color: #a09d9e;
            color: #eaebeb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #afaaaa;
          border-color: #a9a5a5;
          color: rgb(252,251,251);

          &:hover {
            background-color: #afaaaa;
            border-color: #a9a5a5;
            color: rgb(252,251,251);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "dark",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;

exports[`styled-components sawmill should generate light theme based on custom colors 1`] = `
{
  "breakpoints": {
    "max": {
      "lg": "1183px",
      "md": "1023px",
      "sm": "767px",
      "xl": "1439px",
      "xs": "479px",
    },
    "min": {
      "lg": "1184px",
      "md": "1024px",
      "sm": "768px",
      "xl": "1440px",
      "xs": "480px",
    },
    "px": {
      "max": {
        "lg": 1183,
        "md": 1023,
        "sm": 767,
        "xl": 1439,
        "xs": 479,
      },
      "min": {
        "lg": 1184,
        "md": 1024,
        "sm": 768,
        "xl": 1440,
        "xs": 480,
      },
    },
  },
  "colors": {
    "brand": {
      "concrete": "#93a5c0",
      "logo": "#8e99ab",
      "primary": "#ff1e1b",
      "secondary": "#ffebeb",
      "tertiary": "#5c6370",
    },
    "contrast": {
      "danger": "rgb(255,249,249)",
      "default": "rgb(250,250,250)",
      "gray": "rgb(74,74,74)",
      "info": "rgb(235,235,255)",
      "primary": "rgb(230,221,230)",
      "success": "rgb(249,250,249)",
      "warning": "rgb(81,81,0)",
    },
    "disabled": {
      "danger": {
        "background": "#ff6969",
        "color": "rgb(255,250,250)",
      },
      "default": {
        "background": "#a29b9b",
        "color": "rgb(251,251,251)",
      },
      "gray": {
        "background": "#d5d6d8",
        "color": "rgb(82,83,84)",
      },
      "info": {
        "background": "#7269fb",
        "color": "rgb(250,250,255)",
      },
      "primary": {
        "background": "#a2699b",
        "color": "rgb(251,250,251)",
      },
      "success": {
        "background": "#729b69",
        "color": "rgb(250,251,250)",
      },
      "warning": {
        "background": "#e8e832",
        "color": "rgb(90,90,19)",
      },
    },
    "global": {
      "background": "#89a4ff",
      "contentBackground": "#0b42ff",
      "link": "#8cb5ea",
      "linkHover": "#5b85b8",
      "navigationBackground": "#0b42ff",
      "navigationBoxShadow": "rgba(245,246,248,0.5)",
      "textAlt": "#ffebeb",
      "textDefault": "#5c6370",
    },
    "gray": {
      "10": "#5c6370",
      "100": "#ffebeb",
      "20": "#6e727e",
      "30": "#80818b",
      "40": "#929099",
      "50": "#a49fa7",
      "60": "#b7afb4",
      "70": "#c9bec2",
      "80": "#dbcdd0",
      "90": "#eddcdd",
    },
    "input": {
      "background": "#0b42ff",
      "backgroundDisabled": "#0a39dd",
      "border": "#a5a5a5",
      "borderFocus": "#7878ff",
      "boxShadow": "inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(120,120,255,0.4)",
      "color": "#5c6370",
      "colorDisabled": "#b7afb4",
      "placeholder": "#b7afb4",
    },
    "table": {
      "background": "#fafafa",
      "backgroundAlt": "#f0f0f0",
      "backgroundHover": "#f5f5f5",
      "variant": {
        "active": "#e6e6e6",
        "danger": "#ffdddd",
        "info": "#ddddff",
        "primary": "#e6dde6",
        "success": "#dde6dd",
        "warning": "#ffffdd",
      },
      "variantHover": {
        "active": "#bbbbbb",
        "danger": "#ff9e9e",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
    },
    "variant": {
      "danger": "#FF0000",
      "dark": {
        "danger": "#e10000",
        "default": "#717171",
        "gray": "#cfcfd0",
        "info": "#0000e1",
        "primary": "#710071",
        "success": "#007100",
        "warning": "#e1e100",
      },
      "darker": {
        "danger": "#c80000",
        "default": "#646464",
        "gray": "#b8b8b8",
        "info": "#0000c8",
        "primary": "#640064",
        "success": "#006400",
        "warning": "#c8c800",
      },
      "darkest": {
        "danger": "#ab0000",
        "default": "#565656",
        "gray": "#9d9d9e",
        "info": "#0000ab",
        "primary": "#560056",
        "success": "#005600",
        "warning": "#abab00",
      },
      "default": "#808080",
      "gray": "#eaeaeb",
      "info": "#0000FF",
      "light": {
        "danger": "#ff7878",
        "default": "#a5a5a5",
        "gray": "#efeff0",
        "info": "#7878ff",
        "primary": "#a578a5",
        "success": "#78a578",
        "warning": "#ffff78",
      },
      "lighter": {
        "danger": "#ff9e9e",
        "default": "#bbbbbb",
        "gray": "#f2f2f3",
        "info": "#9e9eff",
        "primary": "#bb9ebb",
        "success": "#9ebb9e",
        "warning": "#ffff9e",
      },
      "lightest": {
        "danger": "#ffbdbd",
        "default": "#d0d0d0",
        "gray": "#f6f6f6",
        "info": "#bdbdff",
        "primary": "#d0bdd0",
        "success": "#bdd0bd",
        "warning": "#ffffbd",
      },
      "primary": "#800080",
      "success": "#008000",
      "warning": "#FFFF00",
    },
  },
  "components": {
    "aceEditor": "
 .ace_editor {
    border: 1px solid #dbcdd0;
    border-radius: 5px;
  }

  .ace-graylog {
    background-color: #0b42ff;
    color: #565656;

    &.ace_multiselect .ace_selection.ace_start {
      box-shadow: 0 0 3px 0 #0b42ff;
    }

    .ace_gutter {
      background: #d0d0d0;
      color: #565656;
    }

    .ace_print-margin {
      width: 1px;
      background: #d0d0d0;
    }

    .ace_cursor {
      color: #a5a5a5;
    }

    .ace_marker-layer {
      .ace_selection {
        background: #c9bec2;
      }

      .ace_step {
        background: rgb(255 255 0);
      }

      .ace_bracket {
        margin: -1px 0 0 -1px;
        border: 1px solid #c9bec2;
      }

      .ace_selected-word {
        border: 1px solid #b7afb4;
      }

      .ace_active-line {
        background: #bbbbbb;
      }
    }

    .ace_gutter-active-line {
      background-color: #bbbbbb;
    }

    .ace_invisible {
      color: #c9bec2;
    }

    .ace_keyword,
    .ace_meta,
    .ace_storage,
    .ace_storage.ace_type,
    .ace_support.ace_type {
      color: #8cb5ea;
    }

    .ace_keyword.ace_operator {
      color: #0000c8;
    }

    .ace_constant.ace_character,
    .ace_constant.ace_language,
    .ace_constant.ace_numeric,
    .ace_keyword.ace_other.ace_unit,
    .ace_support.ace_constant,
    .ace_variable.ace_parameter {
      color: #640064;
    }

    .ace_constant.ace_other {
      color: #646464;
    }

    .ace_invalid {
      color: #ffebeb;
      background-color: #ff7878;
    }

    .ace_invalid.ace_deprecated {
      color: #ffebeb;
      background-color: #800080;
    }

    .ace_fold {
      background-color: #0000FF;
      border-color: #565656;
    }

    .ace_entity.ace_name.ace_function,
    .ace_support.ace_function,
    .ace_variable {
      color: #0000FF;
    }

    .ace_support.ace_class,
    .ace_support.ace_type {
      color: #c8c800;
    }

    .ace_heading,
    .ace_markup.ace_heading,
    .ace_string {
      color: #006400;
    }

    .ace_entity.ace_name.ace_tag,
    .ace_entity.ace_other.ace_attribute-name,
    .ace_meta.ace_tag,
    .ace_string.ace_regexp,
    .ace_variable {
      color: #ff7878;
    }

    .ace_comment {
      color: #717171;
    }
  }
",
    "button": [
      "
      &.btn-danger {
        background-color: #FF0000;
        border-color: #ff3535;
        color: rgb(255,249,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ee262b;
          border-color: #ee3e41;
          color: #eee9ea;
        }

        &.active {
          background-color: #ff4a4a;
          border-color: #ff5b5b;
          color: rgb(255,249,249);

          &:hover {
            background-color: #ee4e51;
            border-color: #ee5c5e;
            color: #eee9ea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #ff6969;
          border-color: #ff5b5b;
          color: rgb(255,250,250);

          &:hover {
            background-color: #ff6969;
            border-color: #ff5b5b;
            color: rgb(255,250,250);
          }
        }
      }
",
      "
      &.btn-default {
        background-color: #eddcdd;
        border-color: #e8d8d9;
        color: rgb(75,70,70);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #ddced0;
          border-color: #d9cbcd;
          color: #4e4b4e;
        }

        &.active {
          background-color: #e3d3d5;
          border-color: #ddced0;
          color: rgb(51,47,48);

          &:hover {
            background-color: #d4c6c9;
            border-color: #cfc2c5;
            color: #3b3a3e;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d8cacc;
          border-color: #ddced0;
          color: rgb(84,78,79);

          &:hover {
            background-color: #d8cacc;
            border-color: #ddced0;
            color: rgb(84,78,79);
          }
        }
      }
",
      "
      &.btn-info {
        background-color: #0000FF;
        border-color: #3935fe;
        color: rgb(235,235,255);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #2426ef;
          border-color: #3f3eee;
          color: #dcdcef;
        }

        &.active {
          background-color: #514afd;
          border-color: #635bfc;
          color: rgb(249,249,255);

          &:hover {
            background-color: #534eed;
            border-color: #625cec;
            color: #e8e9ef;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #7269fb;
          border-color: #635bfc;
          color: rgb(250,250,255);

          &:hover {
            background-color: #7269fb;
            border-color: #635bfc;
            color: rgb(250,250,255);
          }
        }
      }
",
      "
      &.btn-link {
        background-color: rgba(255, 255, 255, 0);
        border-color: rgba(255, 255, 255, 0);
        color: #8cb5ea;
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: transparent;
          border-color: transparent;
          color: #5b85b8;
        }

        &.active {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #5b85b8;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: transparent;
            color: #5b85b8;
          }
        }

        &[disabled],
        &.disabled {
          background-color: rgba(255, 255, 255, 0);
          border-color: rgba(255, 255, 255, 0);
          color: #8cb5ea;

          &:hover {
            background-color: rgba(255, 255, 255, 0);
            border-color: rgba(255, 255, 255, 0);
            color: #8cb5ea;
          }
        }
      }
",
      "
      &.btn-primary {
        background-color: #800080;
        border-color: #893587;
        color: rgb(230,221,230);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #7b267e;
          border-color: #833e84;
          color: #d7cfd8;
        }

        &.active {
          background-color: #924a8e;
          border-color: #9a5b95;
          color: rgb(251,249,251);

          &:hover {
            background-color: #8b4e8a;
            border-color: #925c90;
            color: #eae9eb;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #a2699b;
          border-color: #9a5b95;
          color: rgb(251,250,251);

          &:hover {
            background-color: #a2699b;
            border-color: #9a5b95;
            color: rgb(251,250,251);
          }
        }
      }
",
      "
      &.btn-success {
        background-color: #008000;
        border-color: #398735;
        color: rgb(249,250,249);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #247c2b;
          border-color: #3f8241;
          color: #e8eaea;
        }

        &.active {
          background-color: #518e4a;
          border-color: #63955b;
          color: rgb(249,251,249);

          &:hover {
            background-color: #538851;
            border-color: #628f5e;
            color: #e8ebea;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #729b69;
          border-color: #63955b;
          color: rgb(250,251,250);

          &:hover {
            background-color: #729b69;
            border-color: #63955b;
            color: rgb(250,251,250);
          }
        }
      }
",
      "
      &.btn-warning {
        background-color: #FFFF00;
        border-color: #f9fa19;
        color: rgb(81,81,0);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #eeee2b;
          border-color: #e8ea31;
          color: #53542b;
        }

        &.active {
          background-color: #f4f423;
          border-color: #eeee2b;
          color: rgb(77,77,11);

          &:hover {
            background-color: #e4e436;
            border-color: #dedf3b;
            color: #4f512d;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #e8e832;
          border-color: #eeee2b;
          color: rgb(90,90,19);

          &:hover {
            background-color: #e8e832;
            border-color: #eeee2b;
            color: rgb(90,90,19);
          }
        }
      }
",
      "
      &.btn-gray {
        background-color: #eaeaeb;
        border-color: #e5e5e6;
        color: rgb(74,74,74);
        transition: background-color 150ms ease-in-out,
          border 150ms ease-in-out,
          color 150ms ease-in-out;

        &:hover {
          background-color: #dbdbdd;
          border-color: #d6d7d8;
          color: #4d4e51;
        }

        &.active {
          background-color: #e0e0e2;
          border-color: #dbdbdd;
          color: rgb(71,71,71);

          &:hover {
            background-color: #d2d2d5;
            border-color: #cdced0;
            color: #4b4c4f;
          }
        }

        &[disabled],
        &.disabled {
          background-color: #d5d6d8;
          border-color: #dbdbdd;
          color: rgb(82,83,84);

          &:hover {
            background-color: #d5d6d8;
            border-color: #dbdbdd;
            color: rgb(82,83,84);
          }
        }
      }
",
    ],
  },
  "fonts": {
    "family": {
      "body": ""Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif",
      "monospace": ""Ubuntu Mono", Menlo, Monaco, Consolas, "Courier New", monospace",
      "navigation": ""DM Sans", "Helvetica Neue", Helvetica, Arial, sans-serif",
    },
    "lineHeight": {
      "body": "1.24px",
    },
    "size": {
      "body": "1.000rem",
      "extraLarge": "1.383rem",
      "h1": "1.575rem",
      "h2": "1.296rem",
      "h3": "1.215rem",
      "h4": "1.138rem",
      "h5": "1.067rem",
      "h6": "1.000rem",
      "huge": "2.479rem",
      "large": "1.067rem",
      "navigation": "0.937rem",
      "root": "16px",
      "small": "0.878rem",
      "tiny": "0.823rem",
    },
  },
  "mode": "light",
  "spacings": {
    "lg": "1.68rem",
    "md": "1.04rem",
    "px": {
      "lg": 27,
      "md": 17,
      "sm": 10,
      "xl": 44,
      "xs": 6,
      "xxl": 70,
      "xxs": 4,
    },
    "sm": "0.64rem",
    "xl": "2.72rem",
    "xs": "0.40rem",
    "xxl": "4.40rem",
    "xxs": "0.24rem",
  },
  "utils": {
    "colorLevel": [Function],
    "contrastingColor": [Function],
    "opacify": [Function],
    "readableColor": [Function],
  },
}
`;
